# notabanane

./: .babelrc  .codecov.yml  .coveragerc  .env.example  .env.json.example  .eslintrc  .flake8  .gitattributes  .gitignore  .isort.cfg  .travis.yml  Makefile  Pipfile  README.rst  asgi.py  gulpfile.babel.js  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.freeze  requirements.txt  tox.ini  wsgi.py
.github/: dependabot.yml
.github/workflows/: ci-nodejs.yml  ci-python.yml  ci.yml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: App.js.html  index.html
gt/apps/blog/: models.py  routes.py
gt/apps/blog/migrations/: 0001_initial.py  0002_auto_20170509_2152.py  0003_auto_20171009_1131.py
gt/static/sass/: App.scss  common.scss  mixins.scss  variables.scss
gt/templates/: base.html
gt/templates/blog/: blog_page.html
gt_project/: context_processors.py  urls.py
gt_project/settings/: base.py  dev.py
main/apps/blog/: __init__.py  apps.py  models.py  routes.py  shortcuts.py
main/apps/blog/conf/: settings.py
main/apps/blog/migrations/: 0001_initial.py  0002_auto_20190324_2108.py  0003_simplepage.py  0004_auto_20190324_2131.py  0005_remove_blogpage_header_image.py  0007_simplepage_noindex.py  (+12 more)
main/apps/comment/: admin.py  models.py
main/common/: context_managers.py  email.py  middleware.py  mixins.py  text.py  widgets.py
main/common/cache/: constants.py  context_processors.py
main/common/db/: abstract_models.py
main/common/test/: factories.py
main/presentation/: feeds.py  forms.py  urls.py  views.py
main/presentation/graphql/: __init__.py  converter.py
main/presentation/templatetags/: common_duration_tags.py  graphql_binding_tags.py
main/public/: feeds.py  forms.py  views.py
main/static/js/: App.js  App.jsx
main/static/sass/: App.scss  WagtailAdminOverrides.scss  common.scss  mixins.scss  variables.scss
main/templates/: 404.html  500.html  base.html
main/templates/blog/: article_page.html  blog_page.html  recipe_page.html
main/templates/emails/: contact.html
main/templates/partials/: messages.html
main/templates/wagtailadmin/: base.html
notabanane/apps/blog/: __init__.py  apps.py  models.py  routes.py
notabanane/common/: context_managers.py
notabanane/common/templatetags/: common_duration_tags.py
notabanane/public/: feeds.py  forms.py  urls.py  views.py
notabanane/static/js/: App.js
notabanane/static/mjml/: contact.mjml
notabanane/static/sass/: App.scss  common.scss  variables.scss
notabanane/templates/: 500.html  base.html  contact.html  robots.txt
notabanane/templates/blog/: article_page.html  blog_page.html  entry_page.html  recipe_page.html  simple_page.html
notabanane/templates/emails/: contact.html
notabanane/templates/partials/: form_field_input.html  form_field_textarea.html
notabanane_project/: context_processors.py  storage.py  urls.py
notabanane_project/settings/: base.py  dev.py  production.py
project/: storage.py  urls.py
project/data/: graphql_schema.json
project/db/: schema.graphql
project/settings/: base.py  development.py  production.py
tests/: .env.ci  .env.json.ci
tests/jstests/: wrapper.js
tests/jstests/core/: DOMRouter-test.js  FlashMessages-test.js  getCSRFToken-test.js  graphqlClient-test.js  smoothScrollTo-test.js
tests/pytests/: .env.json  conftest.py  settings.py
tests/pytests/safeguards/: test_graphql_schema.py  test_js_routes_resolver.py
(+97 files in other folders)
