[tool.poetry]
name = "notabanane"
description = "Healthy recipes for real life adventurers."
authors = ["Morgan Aubert <me@morganaubert.name>"]

# This project is not intended to be published on Pypi, thus publishing is disabled.
version = "0.0.0"
classifiers = ["Private :: Do Not Upload"]
exclude = ["*"]

[tool.poetry.dependencies]
python = "^3.9"

babel = "*"
boto3 = "*"
django = "^4.0"
django-anymail = "*"
django-filter = "*"
django-js-routes = ">=0.1.3"
django-recaptcha = "*"
django-storages = "<1.13"
django-treebeard = "*"
django-widget-tweaks = "*"
facebook-sdk = "^3.1.0"
graphene-django = "^3.0.0b7"
graphql-core = "<3.2"
html2text = "*"
isodate = "*"
pillow = "*"
psycopg2 = "*"
sentry-sdk = "*"
uvicorn = "^0.17.6"
wagtail = "*"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
coverage = ">=4.5"
django-debug-toolbar = "*"
factory-boy = "*"
faker = "*"
flake8 = "*"
ipython = "*"
isort = "*"
pytest = "^6.2.5"
pytest-cov = "*"
pytest-django = "*"
pytest-pythonpath = "*"
pytest-spec = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
