[tool.poetry]
name = "notabanane"
description = "Healthy recipes for real life adventurers."
authors = ["Morgan Aubert <me@morganaubert.name>"]

# This project is not intended to be published on Pypi, thus publishing is disabled.
version = "0.0.0"
classifiers = ["Private :: Do Not Upload"]
exclude = ["*"]

[tool.poetry.dependencies]
python = "^3.11"

babel = "*"
boto3 = "^1.26.146"
botocore = "^1.31.43"
cryptography = "*"
django = "*"
django-anymail = "*"
django-filter = "*"
django-js-routes = ">=0.1.3"
django-recaptcha = "*"
django-storages = "<1.14"
django-treebeard = "*"
django-widget-tweaks = "*"
facebook-sdk = "^3.1.0"
graphene-django = "^3.1.5"
graphql-core = "<3.2"
html2text = "*"
isodate = "*"
pillow = "<10.1.0"
psycopg2 = "*"
sentry-sdk = "*"
uvicorn = "*"
wagtail = "^5.1"
python-dotenv = "*"


[tool.poetry.dev-dependencies]
coverage = ">=4.5"
django-debug-toolbar = "*"
factory-boy = "*"
faker = "*"
flake8 = "*"
ipython = "*"
isort = "*"
pytest = "^6.2.5"
pytest-cov = "*"
pytest-django = "*"
pytest-pythonpath = "*"
pytest-spec = "*"
