[tool.poetry]
name = "notabanane"
description = "Healthy recipes for real life adventurers."
authors = ["Morgan Aubert <me@morganaubert.name>"]

# This project is not intended to be published on Pypi, thus publishing is disabled.
version = "0.0.0"
classifiers = ["Private :: Do Not Upload"]
exclude = ["*"]

[tool.poetry.dependencies]
python = "^3.12"

babel = "*"
boto3 = "^1.42.22"
botocore = "^1.42.56"
cryptography = "*"
django = "*"
django-anymail = "*"
django-filter = "*"
django-js-routes = ">=0.1.3"
django-recaptcha = "*"
django-storages = "<=1.14.2"
django-treebeard = "*"
django-widget-tweaks = "*"
facebook-sdk = "^3.1.0"
graphene-django = "^3.2.3"
graphql-core = "<3.3"
html2text = "*"
isodate = "*"
pillow = "*"
psycopg2-binary = "*"
python-dotenv = "*"
sentry-sdk = "*"
uvicorn = "*"
wagtail = "^7.2"
willow = {version = ">=1.11", extras = ["heif"]}

[tool.poetry.dev-dependencies]
coverage = ">=4.5"
django-debug-toolbar = "*"
factory-boy = "*"
faker = "*"
flake8 = "*"
ipython = "*"
isort = "*"
pytest = "^6.2.5"
pytest-cov = "*"
pytest-django = "*"
pytest-pythonpath = "*"
pytest-spec = "*"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
